Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ wie der Titel oder der Autorenname.</p>
 <h2>
 <a id="tipps-und-links" class="anchor" href="#tipps-und-links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tipps und Links</h2>
 
-<p>Eine genauere Beschreibung un kurze Einführung in die LaTeX-Vorlage:</p>
+<p>Eine genauere Beschreibung und kurze Einführung in die LaTeX-Vorlage, direkt von mir:
+<a href="https://owncloud.dhbw-stuttgart.de/public.php?service=files&amp;t=f1f229ecaecc73ccad90f1248e1f1300">Beschreibung</a></p>
 
 <p>Eine gute Einführung in LaTeX gibt es von der Fernuni Hagen:
 <a href="http://www.fernuni-hagen.de/imperia/md/content/zmi_2010/a026_latex_einf.pdf">Einführung</a></p>
