Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ wie der Titel oder der Autorenname.</p>
 
 <p>Bestimmungen der DHBW:
 <a href="http://studium.dhbw-stuttgart.de/winf/pruefungsleistungen/projektarbeit.html">Bestimmungen</a></p>
+
+<p><em>Die Vorlage basiert auf der Bachelorarbeit von Fabio Brida</em></p>
       </section>
     </div>
 
