Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Dhbwlatex : DHBW Wirtschaftsinformatik LaTeX-Vorlage">
+    <meta name="description" content="Dhbwlatex : DHBW Stuttgart Wirtschaftsinformatik LaTeX-Vorlage">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/lasrie/dhbwlatex">View on GitHub</a>
 
           <h1 id="project_title">Dhbwlatex</h1>
-          <h2 id="project_tagline">DHBW Wirtschaftsinformatik LaTeX-Vorlage</h2>
+          <h2 id="project_tagline">DHBW Stuttgart Wirtschaftsinformatik LaTeX-Vorlage</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/lasrie/dhbwlatex/zipball/master">Download this project as a .zip file</a>
@@ -34,7 +34,7 @@
         <h1>
 <a id="dhbwlatex" class="anchor" href="#dhbwlatex" aria-hidden="true"><span class="octicon octicon-link"></span></a>dhbwlatex</h1>
 
-<p>Die LaTeX-Vorlage ist angepasst an die Formatvorlagen der DHBW-Stuttgart, Fakultät Wirtschaft, für den Studiengang Wirtschaftsinformatik. Die Vorgaben wurden abgerufen am 27.08.2014 und liegen mit Stand vom 02/2013 vor. </p>
+<p>Die LaTeX-Vorlage ist angepasst an die Formatvorlagen der DHBW Stuttgart, Fakultät Wirtschaft, für den Studiengang Wirtschaftsinformatik. Die Vorgaben wurden abgerufen am 27.08.2014 und liegen mit Stand vom 02/2013 vor. </p>
 
 <p>Andere Studiengänge, insbesondere vom Campus Horb, unterscheiden sich möglicherweise in den Formatvorgaben</p>
 
