Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="dhbwlatex" class="anchor" href="#dhbwlatex" aria-hidden="true"><span class="octicon octicon-link"></span></a>dhbwlatex</h1>
+<a id="dhbwlatex" class="anchor" href="#dhbwlatex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>dhbwlatex</h1>
+
+<h2>
+<a id="diese-vorlage-ist-nicht-mehr-aktuell-die-offizielle-latex-vorlage-befindet-sich-im-moodle-kurs-winf-allg-klick" class="anchor" href="#diese-vorlage-ist-nicht-mehr-aktuell-die-offizielle-latex-vorlage-befindet-sich-im-moodle-kurs-winf-allg-klick" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>DIESE VORLAGE IST NICHT MEHR AKTUELL. DIE OFFIZIELLE LaTeX-VORLAGE BEFINDET SICH IM MOODLE-KURS WINF-ALLG (<a href="https://elearning.dhbw-stuttgart.de/moodle/course/view.php?id=1891">Klick</a>)</h2>
 
 <p>Die LaTeX-Vorlage ist angepasst an die Formatvorlagen der DHBW Stuttgart, Fakultät Wirtschaft, für den Studiengang Wirtschaftsinformatik. Die Vorgaben wurden abgerufen am 27.08.2014 und liegen mit Stand vom 02/2013 vor. </p>
 
 <p>Andere Studiengänge, insbesondere vom Campus Horb, unterscheiden sich möglicherweise in den Formatvorgaben</p>
 
 <h2>
-<a id="grundstruktur" class="anchor" href="#grundstruktur" aria-hidden="true"><span class="octicon octicon-link"></span></a>Grundstruktur</h2>
+<a id="grundstruktur" class="anchor" href="#grundstruktur" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Grundstruktur</h2>
 
 <p>In dem Ordner gibt es drei Unterordner und die Hauptdatei.</p>
 
@@ -53,7 +56,7 @@ an welcher Stelle die Kapitel eingefügt werden und grundlegende Einstellungen,
 wie der Titel oder der Autorenname.</p>
 
 <h2>
-<a id="tipps-und-links" class="anchor" href="#tipps-und-links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tipps und Links</h2>
+<a id="tipps-und-links" class="anchor" href="#tipps-und-links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tipps und Links</h2>
 
 <p>Eine genauere Beschreibung und kurze Einführung in die LaTeX-Vorlage, direkt von mir:
 <a href="https://owncloud.dhbw-stuttgart.de/public.php?service=files&amp;t=f1f229ecaecc73ccad90f1248e1f1300">Beschreibung</a></p>
@@ -75,11 +78,21 @@ wie der Titel oder der Autorenname.</p>
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Dhbwlatex maintained by <a href="https://github.com/lasrie">lasrie</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-26008280-4");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
 
   </body>
 </html>
